--- a/LeafLets/LeafLets.csproj
+++ b/LeafLets/LeafLets.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
+  <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -45,9 +45,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.AspNet.TelemetryCorrelation, Version=1.0.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.TelemetryCorrelation.1.0.5\lib\net45\Microsoft.AspNet.TelemetryCorrelation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Diagnostics.DiagnosticSource, Version=4.0.3.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.5.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -55,6 +67,24 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.Helpers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.7\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.7\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.WebPages.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.7\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -72,35 +102,8 @@
     </Reference>
     <Reference Include="System.Net.Http.WebRequest">
     </Reference>
-    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.Helpers.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Mvc, Version=5.2.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.4\lib\net45\System.Web.Mvc.dll</HintPath>
-    </Reference>
     <Reference Include="System.Web.Optimization">
       <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.4\lib\net45\System.Web.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.4\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -157,15 +160,6 @@
     <Reference Include="Microsoft.Owin.Security.OAuth">
       <HintPath>..\packages\Microsoft.Owin.Security.OAuth.4.0.0\lib\net451\Microsoft.Owin.Security.OAuth.dll</HintPath>
     </Reference>
-    <Reference Include="System.Diagnostics.DiagnosticSource">
-      <HintPath>..\packages\System.Diagnostics.DiagnosticSource.4.4.1\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.AspNet.TelemetryCorrelation">
-      <HintPath>..\packages\Microsoft.AspNet.TelemetryCorrelation.1.0.0\lib\net45\Microsoft.AspNet.TelemetryCorrelation.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform">
-      <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -195,8 +189,132 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="node_modules\leaflet.browser.print\dist\leaflet.browser.print.js" />
+    <Content Include="node_modules\leaflet.browser.print\dist\leaflet.browser.print.min.js" />
+    <Content Include="node_modules\leaflet.browser.print\examples\data\us-states.js" />
+    <Content Include="node_modules\leaflet.browser.print\examples\localization.html" />
+    <Content Include="node_modules\leaflet.browser.print\examples\manipulations.html" />
+    <Content Include="node_modules\leaflet.browser.print\examples\print-with-legend.html" />
+    <Content Include="node_modules\leaflet.browser.print\examples\savePNG.html" />
+    <Content Include="node_modules\leaflet.browser.print\index.html" />
+    <Content Include="node_modules\leaflet.browser.print\src\leaflet.browser.print.js" />
+    <Content Include="node_modules\leaflet.browser.print\src\leaflet.browser.print.sizes.js" />
+    <Content Include="node_modules\leaflet.browser.print\src\leaflet.browser.print.utils.js" />
+    <Content Include="node_modules\leaflet.browser.print\webpack.config.js" />
+    <Content Include="node_modules\leaflet\dist\images\layers-2x.png" />
+    <Content Include="node_modules\leaflet\dist\images\layers.png" />
+    <Content Include="node_modules\leaflet\dist\images\marker-icon-2x.png" />
+    <Content Include="node_modules\leaflet\dist\images\marker-icon.png" />
+    <Content Include="node_modules\leaflet\dist\images\marker-shadow.png" />
+    <Content Include="node_modules\leaflet\dist\leaflet-src.esm.js" />
+    <Content Include="node_modules\leaflet\dist\leaflet-src.js" />
+    <Content Include="node_modules\leaflet\dist\leaflet.css" />
+    <Content Include="node_modules\leaflet\dist\leaflet.js" />
+    <Content Include="node_modules\leaflet\src\control\Control.Attribution.js" />
+    <Content Include="node_modules\leaflet\src\control\Control.js" />
+    <Content Include="node_modules\leaflet\src\control\Control.Layers.js" />
+    <Content Include="node_modules\leaflet\src\control\Control.Scale.js" />
+    <Content Include="node_modules\leaflet\src\control\Control.Zoom.js" />
+    <Content Include="node_modules\leaflet\src\control\index.js" />
+    <Content Include="node_modules\leaflet\src\core\Browser.js" />
+    <Content Include="node_modules\leaflet\src\core\Class.js" />
+    <Content Include="node_modules\leaflet\src\core\Events.js" />
+    <Content Include="node_modules\leaflet\src\core\Handler.js" />
+    <Content Include="node_modules\leaflet\src\core\index.js" />
+    <Content Include="node_modules\leaflet\src\core\Util.js" />
+    <Content Include="node_modules\leaflet\src\dom\DomEvent.DoubleTap.js" />
+    <Content Include="node_modules\leaflet\src\dom\DomEvent.js" />
+    <Content Include="node_modules\leaflet\src\dom\DomEvent.Pointer.js" />
+    <Content Include="node_modules\leaflet\src\dom\DomUtil.js" />
+    <Content Include="node_modules\leaflet\src\dom\Draggable.js" />
+    <Content Include="node_modules\leaflet\src\dom\index.js" />
+    <Content Include="node_modules\leaflet\src\dom\PosAnimation.js" />
+    <Content Include="node_modules\leaflet\src\geometry\Bounds.js" />
+    <Content Include="node_modules\leaflet\src\geometry\index.js" />
+    <Content Include="node_modules\leaflet\src\geometry\LineUtil.js" />
+    <Content Include="node_modules\leaflet\src\geometry\Point.js" />
+    <Content Include="node_modules\leaflet\src\geometry\PolyUtil.js" />
+    <Content Include="node_modules\leaflet\src\geometry\Transformation.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\CRS.Earth.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\CRS.EPSG3395.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\CRS.EPSG3857.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\CRS.EPSG4326.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\CRS.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\CRS.Simple.js" />
+    <Content Include="node_modules\leaflet\src\geo\crs\index.js" />
+    <Content Include="node_modules\leaflet\src\geo\index.js" />
+    <Content Include="node_modules\leaflet\src\geo\LatLng.js" />
+    <Content Include="node_modules\leaflet\src\geo\LatLngBounds.js" />
+    <Content Include="node_modules\leaflet\src\geo\projection\index.js" />
+    <Content Include="node_modules\leaflet\src\geo\projection\Projection.LonLat.js" />
+    <Content Include="node_modules\leaflet\src\geo\projection\Projection.Mercator.js" />
+    <Content Include="node_modules\leaflet\src\geo\projection\Projection.SphericalMercator.js" />
+    <Content Include="node_modules\leaflet\src\images\layers.svg" />
+    <Content Include="node_modules\leaflet\src\images\logo.svg" />
+    <Content Include="node_modules\leaflet\src\images\marker.svg" />
+    <Content Include="node_modules\leaflet\src\layer\DivOverlay.js" />
+    <Content Include="node_modules\leaflet\src\layer\FeatureGroup.js" />
+    <Content Include="node_modules\leaflet\src\layer\GeoJSON.js" />
+    <Content Include="node_modules\leaflet\src\layer\ImageOverlay.js" />
+    <Content Include="node_modules\leaflet\src\layer\index.js" />
+    <Content Include="node_modules\leaflet\src\layer\Layer.js" />
+    <Content Include="node_modules\leaflet\src\layer\LayerGroup.js" />
+    <Content Include="node_modules\leaflet\src\layer\marker\DivIcon.js" />
+    <Content Include="node_modules\leaflet\src\layer\marker\Icon.Default.js" />
+    <Content Include="node_modules\leaflet\src\layer\marker\Icon.js" />
+    <Content Include="node_modules\leaflet\src\layer\marker\index.js" />
+    <Content Include="node_modules\leaflet\src\layer\marker\Marker.Drag.js" />
+    <Content Include="node_modules\leaflet\src\layer\marker\Marker.js" />
+    <Content Include="node_modules\leaflet\src\layer\Popup.js" />
+    <Content Include="node_modules\leaflet\src\layer\tile\GridLayer.js" />
+    <Content Include="node_modules\leaflet\src\layer\tile\index.js" />
+    <Content Include="node_modules\leaflet\src\layer\tile\TileLayer.js" />
+    <Content Include="node_modules\leaflet\src\layer\tile\TileLayer.WMS.js" />
+    <Content Include="node_modules\leaflet\src\layer\Tooltip.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Canvas.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Circle.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\CircleMarker.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\index.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Path.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Polygon.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Polyline.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Rectangle.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Renderer.getRenderer.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\Renderer.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\SVG.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\SVG.Util.js" />
+    <Content Include="node_modules\leaflet\src\layer\vector\SVG.VML.js" />
+    <Content Include="node_modules\leaflet\src\layer\VideoOverlay.js" />
+    <Content Include="node_modules\leaflet\src\Leaflet.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.BoxZoom.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.DoubleClickZoom.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.Drag.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.Keyboard.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.ScrollWheelZoom.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.Tap.js" />
+    <Content Include="node_modules\leaflet\src\map\handler\Map.TouchZoom.js" />
+    <Content Include="node_modules\leaflet\src\map\index.js" />
+    <Content Include="node_modules\leaflet\src\map\Map.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="node_modules\leaflet\CHANGELOG.md" />
+    <Content Include="node_modules\leaflet\dist\leaflet-src.esm.js.map" />
+    <Content Include="node_modules\leaflet\dist\leaflet-src.js.map" />
+    <Content Include="node_modules\leaflet\dist\leaflet.js.map" />
+    <Content Include="node_modules\leaflet\LICENSE" />
+    <Content Include="node_modules\leaflet\package.json" />
+    <Content Include="node_modules\leaflet\README.md" />
+    <Content Include="node_modules\leaflet\src\core\Class.leafdoc" />
+    <Content Include="node_modules\leaflet\src\core\Events.leafdoc" />
+    <Content Include="node_modules\leaflet\src\layer\Layer.Interactive.leafdoc" />
+    <Content Include="node_modules\leaflet\src\map\Map.methodOptions.leafdoc" />
+    <Content Include="node_modules\leaflet.browser.print\.github\ISSUE_TEMPLATE\bug_report.md" />
+    <Content Include="node_modules\leaflet.browser.print\.github\ISSUE_TEMPLATE\feature_request.md" />
+    <Content Include="node_modules\leaflet.browser.print\LICENSE" />
+    <Content Include="node_modules\leaflet.browser.print\package.json" />
+    <Content Include="node_modules\leaflet.browser.print\README.md" />
+    <Content Include="package.json" />
+    <Content Include="bower.json" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -208,6 +326,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\plugins\Leaflet.Control.Custom.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -292,7 +411,7 @@
     <PropertyGroup>
       <ErrorText>此專案參考這部電腦上所缺少的 NuGet 套件。請啟用 NuGet 套件還原，以下載該套件。如需詳細資訊，請參閱 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的檔案是 {0}。</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.0\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
