--- a/LeafLets/package.json
+++ b/LeafLets/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "leaflet": "^1.3.4",
     "leaflet-geosearch": "^2.7.0",
-    "leaflet.browser.print": "^0.7.5"
+    "leaflet.browser.print": "^0.7.5",
+    "leaflet.locatecontrol": "^0.65.2"
   }
 }
