--- a/LeafLets/packages.config
+++ b/LeafLets/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.zh-Hant" version="6.2.0" targetFramework="net472" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net472" />
+  <package id="FontAwesome.MVC" version="1.0.0" targetFramework="net472" />
   <package id="jQuery" version="3.3.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
@@ -45,5 +46,6 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
