--- a/LeafLets/package.json
+++ b/LeafLets/package.json
@@ -13,8 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "leaflet": "^1.3.4",
+    "leaflet-control-geocoder": "^1.6.0",
     "leaflet-geosearch": "^2.7.0",
     "leaflet.browser.print": "^0.7.5",
-    "leaflet.locatecontrol": "^0.65.2"
+    "leaflet.locatecontrol": "^0.65.2",
+    "mapbox-gl": "^0.52.0",
+    "polyfill": "^0.1.0"
   }
 }
