--- a/LeafLets/LeafLets.csproj
+++ b/LeafLets/LeafLets.csproj
@@ -108,7 +108,7 @@
       <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
     </Reference>
     <Reference Include="WebActivatorEx, Version=2.0.0.0, Culture=neutral, PublicKeyToken=7b26dc2a43f6a0d4, processorArchitecture=MSIL">
-      <HintPath>..\packages\WebActivatorEx.2.0\lib\net40\WebActivatorEx.dll</HintPath>
+      <HintPath>..\packages\WebActivatorEx.2.2.0\lib\net40\WebActivatorEx.dll</HintPath>
     </Reference>
     <Reference Include="WebGrease">
       <Private>True</Private>
@@ -1257,6 +1257,7 @@
     <Content Include="node_modules\mapbox-gl\src\style\style_layer\layer_properties.js.ejs" />
     <Content Include="node_modules\mapbox-gl\src\util\struct_array.js.ejs" />
     <Content Include="node_modules\mapbox-gl\src\util\struct_array_layout.js.ejs" />
+    <Content Include="libman.json" />
     <None Include="Properties\PublishProfiles\mapdemo - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\mapdemo - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -1330,6 +1331,8 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="tsScripts\app.ts" />
+    <TypeScriptCompile Include="tsScripts\cityData.ts" />
+    <TypeScriptCompile Include="tsScripts\tileLayer.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
